<resources>
    <string name="app_name">elCarrito</string>
    <string name="business_name">El Carrito</string>
    <string name="logo_empresarial">logo_empresarial</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Password</string>
    <string name="login">iniciar sesion</string>
    <string name="forget_password">Olvide mi contraseña</string>
    <string name="log_up">Registrarme</string>
    <string name="recuperation_text">Ingrese su mail</string>
    <string name="recuperation_text_button">Enviar mail de recuperación</string>
    <string name="back">volver</string>
    <string name="recuperation_text_validation">Se envio el correo de recuperacion</string>
    <string name="emailUser">Correo electronico</string>
    <string name="confirm_contraseña">Confirmar contraseña</string>
    <string name="registrase">Registrase</string>
    <string name="productItemDescription">ProductTitle</string>
    <string name="productitemimage">productItemImage</string>
    <string name="productos_destacados">PRODUCTOS DESTACADOS</string>
    <string name="productos">Productos</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="shop">Shop</string>
    <string name="saved">Saved</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="principal">Principal</string>
    <string name="mi_carrito">Mi carrito</string>
    <string name="destacados">Destacados</string>
    <string name="configuraci_n">Configuración</string>
    <string name="historial">Historial</string>
    <string name="perfil">Perfil</string>
    <string name="volver">volver</string>
    <string name="comprar">Comprar</string>
    <string name="aca_va_las_settings">ACA VA LAS SETTINGS</string>
    <string name="ticket">Ticket</string>
    <string name="total">Total:</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cambiar_datos">Cambiar Datos</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="direccion">direccion</string>
    <string name="ejemplo_mail">ejemplo@gmail.com</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descriocion_del_producto">Descriocion del producto</string>
    <string name="agregar">agregar</string>
    <string name="destacar">destacar</string>
    <string name="correo">Correo:</string>
    <string name="imagen">imagen</string>
    <string name="contrase_a">contraseña:</string>
    <string name="imagen_de_no_coneccion">Imagen de no coneccion</string>
    <string name="cantidad_de_columnas">Cantidad de columnas</string>
    <string name="columnas_base">2</string>
    <string name="aun_no_hay_direccion_guardada">Aun no hay direccion guardada</string>
    <string name="vaciar">Vaciar</string>

</resources>