<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/principal" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/icon_shop"
            android:title="@string/mi_carrito"
            />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/icon_saved"
            android:title="@string/destacados" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_history"
            android:title="@string/historial" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/configuraci_n" />
    </group>
</menu>