<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iua.elcarrito.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.iua.elcarrito.ui.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.iua.elcarrito.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.iua.elcarrito.ui.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
</navigation>